--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="nav">
             <nav>
                 <ul>
-                    <li><a href="#">Shop</a></li>
-                    <li><a href="#">Offers</a></li>
-                    <li><a href="#">Categories</a></li>
+                    <li><a href="#about">Shop</a></li>
+                    <li><a href="#services">Offers</a></li>
+                    <li><a href="#menu">Categories</a></li>
                 </ul>
             </nav>
             <div class="nav-name">
@@ -95,7 +95,7 @@
                 </div>
                 <div class="menu1-name">
                     <h1>Ip 14 Promax Black</h1>
-                    <h2>$100.00</h2>
+                    <h2>$850.00</h2>
                 </div>
             </div>
             <div class="menu-1">
@@ -104,7 +104,7 @@
                 </div>
                 <div class="menu1-name">
                     <h1>Ip 14 Promax Brown</h1>
-                    <h2>$100.00</h2>
+                    <h2>$800.00</h2>
                 </div>
             </div>
             <div class="menu-1">
@@ -113,7 +113,7 @@
                 </div>
                 <div class="menu1-name">
                     <h1>Ip 14 Promax Purple</h1>
-                    <h2>$100.00</h2>
+                    <h2>$700.00</h2>
                 </div>
             </div>
             <div class="menu-1">
@@ -122,7 +122,7 @@
                 </div>
                 <div class="menu1-name">
                     <h1>Ip 14 Promax Yellow</h1>
-                    <h2>$100.00</h2>
+                    <h2>$800.00</h2>
                 </div>
             </div>
             <div class="menu-1">
@@ -131,7 +131,7 @@
                 </div>
                 <div class="menu1-name">
                     <h1>Ip 14 Promax Blue</h1>
-                    <h2>$100.00</h2>
+                    <h2>$700.00</h2>
                 </div>
             </div>
         </div>
@@ -159,7 +159,7 @@
     <footer>
         <div class="footer-box">
             <div class="footer-name">
-                <h1>Khoyum</h1>
+                <h1>KHO<span>YUM</span></h1>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error hic porro voluptas harum debitis
                     fugiat
                     quibusdam aut enim. Ipsam, doloribus.</p>
